resources page alignment fixes

--- a/src/pages/resources/resources.component.scss
+++ b/src/pages/resources/resources.component.scss
@@ -4,7 +4,7 @@
     background-color: #effcf3;
     h1 {
       margin-bottom: 60px;
-      font-family: "Poppins", sans-serif;
+      font-family: 'Poppins', sans-serif;
     }
 
     .gradiunt {
@@ -52,7 +52,7 @@
         font-weight: 600;
         max-width: 80%;
         left: 45px;
-        font-family: "Poppins", sans-serif;
+        font-family: 'Poppins', sans-serif;
       }
       span {
         position: absolute;
@@ -70,7 +70,7 @@
       border-radius: 24px;
       > .col {
         clear: both;
-        font-family: "Poppins", sans-serif;
+        font-family: 'Poppins', sans-serif;
         font-size: 15px;
         line-height: 15px;
         align-items: center;
@@ -86,14 +86,23 @@
           background: #f4f4f4;
         }
       }
+      &-scroll {
+        overflow-y: auto;
+        max-height: 300px;
+        .col {
+          display: inline-flex;
+          gap: 10px;
+          margin-top: 12px;
+        }
+      }
     }
   }
   &--tabs {
-    background-image: url(./../../assets/images/resource-gradiunt.png);
+    background-image: linear-gradient(180deg, #effcf3 5%, #ffffff 95%);
     background-repeat: repeat-x;
     background-color: white;
     .nav-item {
-      margin-right: 16px;
+      margin-right: 24px;
       margin-bottom: 16px;
       button {
         background-color: transparent;
@@ -103,14 +112,42 @@
         text-align: left;
         padding-right: 60px;
         font-size: 24px;
-        font-family: "Poppins", sans-serif;
+        font-family: 'Poppins', sans-serif;
         font-weight: 500;
         color: #bbbbc2;
         transition: all ease 0.7s;
+        white-space: nowrap;
         &.active,
         &:hover {
           color: black;
           border-color: #8fc44c;
+        }
+      }
+    }
+    .nav-pills-cont {
+      position: relative;
+      margin-bottom: 20px;
+      .nav-pills {
+        overflow: hidden;
+        flex-wrap: nowrap;
+        width: auto;
+      }
+      .arrown-btns {
+        background: transparent;
+        border: none;
+        font-size: 22px;
+        position: absolute;
+        left: -26px;
+        top: 0px;
+        opacity: 0;
+        &.right {
+          right: -26px;
+          left: inherit;
+        }
+      }
+      &:hover {
+        .arrown-btns {
+          opacity: 1;
         }
       }
     }
@@ -119,7 +156,7 @@
 .alpha {
   span {
     cursor: pointer;
-    font-family: "Poppins", sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-weight: 600;
     display: inline-block;
     margin-right: 16px;
@@ -162,15 +199,15 @@ p {
 }
 
 .info-widget {
-        width: 31.75%;
-        border: 1px solid black;
-        display: inline-block;
-      }
+  width: 31.75%;
+  border: 1px solid black;
+  display: inline-block;
+}
 
-      .middle {
-        float: left;
-        width: 90%;
-        overflow: auto;
-        /*will change this to hidden later to deny scolling to user*/
-        white-space: nowrap;
-      }
+.middle {
+  float: left;
+  width: 90%;
+  overflow: auto;
+  /*will change this to hidden later to deny scolling to user*/
+  white-space: nowrap;
+}
